fix(section): Increased spacing between sections

--- a/style/main.css
+++ b/style/main.css
@@ -86,7 +86,7 @@ aside{
 
 #container{
     header, section{
-        padding-bottom: 15px;
+        padding-bottom: 32px;
     }
 
     h2{
